# casm_offline_frb_injector

./: .gitignore  README.md  batch_inject_frbs.py  inject_frb.py  pyproject.toml  run_hella.py
casm_offline_frb_injector/: __init__.py  batch_inject_frbs.py  inject_frb.py  inject_frb_dedigitized.py  plot_recovery.py  run_hella.py
tests/: test_injection_pipeline.py  test_snr_recovery.py
